--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,18 @@ jobs:
           tags:
             only: /.*/
           command: |
-            echo -e "[test]" >> ~/.pypirc
-            echo -e "username = pyjadx" >> ~/.pypirc
-            echo -e "password = $PYPI_PASSWORD" >> ~/.pypir
-            twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+            echo -e "[distutils]"    >> ~/.pypirc
+            echo -e "index-servers=" >> ~/.pypirc
+            echo -e "   pypi"        >> ~/.pypirc
+            echo -e "   testpypi"    >> ~/.pypirc
+            echo -e "[testpypi]"                                >> ~/.pypirc
+            echo -e "repository: https://test.pypi.org/legacy/" >> ~/.pypirc
+            echo -e "username: pyjadx"                          >> ~/.pypirc
+            echo -e "password: $PYPI_PASSWORD"                  >> ~/.pypirc
+            echo -e "[pypi]"                                    >> ~/.pypirc
+            echo -e "username = pyjadx"                         >> ~/.pypirc
+            echo -e "password = $PYPI_PASSWORD"                 >> ~/.pypirc
+            python3.6 -m twine upload --skip-existing --repository testpypi ./dist/*
 
 
 
