--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,13 @@
 name             = pyjadx
 description      = Python Binding for Jadx decompiler
 description-file = README.rst
+long-description = file: README.rst
 license-file     = LICENSE
 author           = Romain Thomas
 author_email     = pyjadx@romainthomas.fr
 license          = Apache 2.0
-keywords         = android, decompiler, binding
+keywords         = android, decompiler, binding, jadx
+url              = https://github.com/romainthomas/pyjadx
 home-page        = https://github.com/romainthomas/pyjadx
 project_urls =
   Bug Tracker   = https://github.com/romainthomas/pyjadx/issues
@@ -15,15 +17,25 @@ project_urls =
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: C++
     Topic :: Software Development :: Libraries
+    Topic :: Scientific/Engineering :: Information Analysis
+    License :: OSI Approved :: Apache Software License
+    Operating System :: MacOS
+    Operating System :: POSIX :: Linux
 
 [options]
 zip_safe = False
 packages = find:
 include_package_data = True
 python_requires = >=3.6
-install_requires =
+setup_requires =
+  setuptools >= 38.3.0
+
+[options.extras_require]
+doc =
   sphinx
   colored
   sphinx-paramlinks
@@ -31,11 +43,20 @@ install_requires =
   pygments
 
 [build_sphinx]
-project = PyJadx
+project    = PyJadx
 source-dir = doc
 config-dir = doc
 build-dir  = doc/_build
 fresh-env  = True
 
+[bdist_wheel]
+universal = 1
+
 [build_ext]
-inplace=1
+inplace = 1
+
+[aliases]
+clean_egg_info = egg_info -Db ''
+release = clean_egg_info sdist bdist_wheel
+source = register sdist binary
+binary = bdist_egg upload --show-response
