--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,8 @@ before_install:
 
 
 script:
-  - $PYTHON_BINARY ./setup.py build -j8 install
-  - $PYTHON_BINARY ./setup.py bdist_wheel
+  - $PYTHON_BINARY ./setup.py --static-jvm build -j8 install
+  - $PYTHON_BINARY ./setup.py --static-jvm bdist_wheel
   - $PYTHON_BINARY ./examples/jadx_decompile.py ./examples/com.passwordchecker.apk --classes com.example.passwordchecker.PasswordChecker
 
 deploy:
