--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,10 @@ target_include_directories(jadxjni INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 target_sources(jadxjni
   INTERFACE
     "${CMAKE_CURRENT_LIST_DIR}/core.hpp"
+    "${CMAKE_CURRENT_LIST_DIR}/utils.hpp"
   INTERFACE
     "${CMAKE_CURRENT_LIST_DIR}/core.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/utils.cpp"
 )
 
 if(UNIX AND NOT APPLE) # Linux
